# x_trade_project

./: README.md  example.env.py  manage.py  pyproject.toml
trade_net/: admin.py  apps.py  urls.py
trade_net/migrations/: 0001_initial.py  0002_remove_factory_address_factory_address.py  0003_alter_factory_address.py  0004_alter_factory_address.py  0005_retailnetwork.py  0006_soletrader.py
trade_net/models/: base.py  factory.py  retail_network.py  sole_trader.py
trade_net/serializers/: base.py  factory.py  retail_network.py  sole_trader.py
trade_net/urls/: factory.py  retail_network.py  sole_trader.py
trade_net/views/: factory.py  retail_network.py  sole_trader.py
x_trade/: asgi.py  settings.py  urls.py  wsgi.py
